--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           data-aos-delay="50"
           data-aos-duration="1000"
           data-aos-easing="ease"
-          data-aos-once="false"
+          data-aos-once="true"
           id="about-text"
           class=""
         >
@@ -110,7 +110,7 @@
             data-aos-delay="50"
             data-aos-duration="1000"
             data-aos-easing="ease"
-            data-aos-once="false"
+            data-aos-once="true"
             class=""
           >
             Skills I have
@@ -120,7 +120,7 @@
             data-aos-delay="50"
             data-aos-duration="1000"
             data-aos-easing="ease"
-            data-aos-once="false"
+            data-aos-once="true"
             class=""
           >
             Here are the skills.
@@ -131,7 +131,7 @@
               data-aos-delay="50"
               data-aos-duration="1000"
               data-aos-easing="ease"
-              data-aos-once="false"
+              data-aos-once="true"
               class="skill-left-card"
             >
               <h6 class="skill-card-text">Web</h6>
@@ -141,7 +141,7 @@
                 data-aos-delay="50"
                 data-aos-duration="1000"
                 data-aos-easing="ease"
-                data-aos-once="false"
+                data-aos-once="true"
                 class="skill"
               >
                 <img
@@ -160,7 +160,7 @@
                 data-aos-delay="50"
                 data-aos-duration="1000"
                 data-aos-easing="ease"
-                data-aos-once="false"
+                data-aos-once="true"
                 class="skill"
               >
                 <img
@@ -179,7 +179,7 @@
                 data-aos-delay="50"
                 data-aos-duration="1000"
                 data-aos-easing="ease"
-                data-aos-once="false"
+                data-aos-once="true"
                 class="skill"
               >
                 <img
@@ -198,7 +198,7 @@
                 data-aos-delay="50"
                 data-aos-duration="1000"
                 data-aos-easing="ease"
-                data-aos-once="false"
+                data-aos-once="true"
                 class="skill"
               >
                 <img
@@ -217,7 +217,7 @@
                 data-aos-delay="50"
                 data-aos-duration="1000"
                 data-aos-easing="ease"
-                data-aos-once="false"
+                data-aos-once="true"
                 class="skill"
               >
                 <img
@@ -236,7 +236,7 @@
                 data-aos-delay="50"
                 data-aos-duration="1000"
                 data-aos-easing="ease"
-                data-aos-once="false"
+                data-aos-once="true"
                 class="skill"
               >
                 <img
@@ -255,7 +255,7 @@
                 data-aos-delay="50"
                 data-aos-duration="1000"
                 data-aos-easing="ease"
-                data-aos-once="false"
+                data-aos-once="true"
                 class="skill"
               >
                 <img
@@ -274,7 +274,7 @@
                 data-aos-delay="50"
                 data-aos-duration="1000"
                 data-aos-easing="ease"
-                data-aos-once="false"
+                data-aos-once="true"
                 class="skill"
               >
                 <img
@@ -295,7 +295,7 @@
               data-aos-delay="50"
               data-aos-duration="1000"
               data-aos-easing="ease"
-              data-aos-once="false"
+              data-aos-once="true"
               class="skill-right-card"
             >
               <h6 class="skill-card-text">Other</h6>
@@ -305,7 +305,7 @@
                 data-aos-delay="50"
                 data-aos-duration="1000"
                 data-aos-easing="ease"
-                data-aos-once="false"
+                data-aos-once="true"
                 class="skill"
               >
                 <img
@@ -325,7 +325,7 @@
                 data-aos-delay="50"
                 data-aos-duration="1000"
                 data-aos-easing="ease"
-                data-aos-once="false"
+                data-aos-once="true"
                 class="skill"
               >
                 <img
@@ -344,7 +344,7 @@
                 data-aos-delay="50"
                 data-aos-duration="1000"
                 data-aos-easing="ease"
-                data-aos-once="false"
+                data-aos-once="true"
                 class="skill"
               >
                 <img
@@ -363,7 +363,7 @@
                 data-aos-delay="50"
                 data-aos-duration="1000"
                 data-aos-easing="ease"
-                data-aos-once="false"
+                data-aos-once="true"
                 class="skill"
               >
                 <img
@@ -382,7 +382,7 @@
                 data-aos-delay="50"
                 data-aos-duration="1000"
                 data-aos-easing="ease"
-                data-aos-once="false"
+                data-aos-once="true"
                 class="skill"
               >
                 <img
@@ -401,7 +401,7 @@
                 data-aos-delay="50"
                 data-aos-duration="1000"
                 data-aos-easing="ease"
-                data-aos-once="false"
+                data-aos-once="true"
                 class="skill"
               >
                 <img
@@ -420,7 +420,7 @@
                 data-aos-delay="50"
                 data-aos-duration="1000"
                 data-aos-easing="ease"
-                data-aos-once="false"
+                data-aos-once="true"
                 class="skill"
               >
                 <img
@@ -444,7 +444,7 @@
             data-aos-delay="50"
             data-aos-duration="1000"
             data-aos-easing="ease"
-            data-aos-once="false"
+            data-aos-once="true"
             class=""
           >
             Project Works
@@ -454,7 +454,7 @@
             data-aos-delay="50"
             data-aos-duration="1000"
             data-aos-easing="ease"
-            data-aos-once="false"
+            data-aos-once="true"
             class=""
           >
             Here are my Frontend projects.
@@ -465,7 +465,7 @@
               data-aos-delay="50"
               data-aos-duration="1000"
               data-aos-easing="ease"
-              data-aos-once="false"
+              data-aos-once="true"
               class="project-card"
             >
               <div class="project-card-left">
@@ -490,7 +490,7 @@
               data-aos-delay="50"
               data-aos-duration="1000"
               data-aos-easing="ease"
-              data-aos-once="false"
+              data-aos-once="true"
               class="project-card"
             >
               <div class="project-card-left">
@@ -510,7 +510,7 @@
               data-aos-delay="50"
               data-aos-duration="1000"
               data-aos-easing="ease"
-              data-aos-once="false"
+              data-aos-once="true"
               class="project-card"
             >
               <div class="project-card-left">
@@ -539,7 +539,7 @@
           data-aos-delay="50"
           data-aos-duration="1000"
           data-aos-easing="ease"
-          data-aos-once="false"
+          data-aos-once="true"
           class=" "
         >
           Contact
@@ -549,10 +549,20 @@
           data-aos-delay="50"
           data-aos-duration="1000"
           data-aos-easing="ease"
-          data-aos-once="false"
+          data-aos-once="true"
           class="contact-card"
         >
-          <img loading="lazy" class=" " src="assets/contact.png" alt="🤝" />
+          <img
+            loading="lazy"
+            data-aos="animateup-small"
+            data-aos-delay="50"
+            data-aos-duration="1000"
+            data-aos-easing="ease"
+            data-aos-once="true"
+            class=" "
+            src="assets/contact.png"
+            alt="🤝"
+          />
           <div class="contact-details">
             <div>
               <h1
