--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                 data-aos-delay="50"
                 data-aos-duration="1000"
                 data-aos-easing="ease"
-                data-aos-once="false"
+                data-aos-once="true"
                 class=" "
               >
                 Dhanush Kumar k
@@ -580,7 +580,7 @@
                 data-aos-delay="50"
                 data-aos-duration="1000"
                 data-aos-easing="ease"
-                data-aos-once="false"
+                data-aos-once="true"
                 class=" "
               >
                 Mail:
@@ -594,7 +594,7 @@
               data-aos-delay="50"
               data-aos-duration="1000"
               data-aos-easing="ease"
-              data-aos-once="false"
+              data-aos-once="true"
               class=" "
             >
               <a target="_blank" href="mailto:kdhanush894@gmail.com"
