--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     />
     <link rel="canonical" href="https://dhanushcodev.github.io/cv/" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="css/style.min.css" />
-    <link rel="stylesheet" href="css/media500.min.css" />
-    <link rel="stylesheet" href="css/media900.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/media500.css" />
+    <link rel="stylesheet" href="css/media900.css" />
 
     <title>Dhanush portfolio</title>
   </head>
@@ -31,7 +31,7 @@
 
     <header class="header">
       <div id="nav">
-        <h1>Dhanush Kumar k</h1>
+        <h1>DK</h1>
         <ion-icon class="menu" onclick="slide()" name="menu-outline"></ion-icon>
         <ion-icon
           class="close menuinvisible"
@@ -637,6 +637,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <script src="index.min.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
