new project added

--- a/index.html
+++ b/index.html
@@ -482,10 +482,34 @@
               class="project-card"
             >
               <div class="project-card-left">
+                <h3>Kotlin, MVVM, DI, RoomDb</h3>
+              </div>
+              <div class="project-card-middle">
+                <img loading="lazy" src="assets/noteappmockup.png" alt="" />
+              </div>
+              <div class="project-card-right">
+                <h2>Note Application <br />Native Android</h2>
+                <a
+                  class="view-projects"
+                  target="_blank"
+                  href="https://github.com/dhanushcodev/Notes-App"
+                  >View Project</a
+                >
+              </div>
+            </div>
+            <div
+              data-aos="animateup"
+              data-aos-delay="50"
+              data-aos-duration="1000"
+              data-aos-easing="ease"
+              data-aos-once="true"
+              class="project-card"
+            >
+              <div class="project-card-left">
                 <h3>Html, Css, Bootstrap, Javascript</h3>
               </div>
               <div class="project-card-middle">
-                <img loading="lazy" src="assets/port1.png" alt="" />
+                <img loading="lazy" src="assets/image.png" alt="" />
               </div>
               <div class="project-card-right">
                 <h2>Personal Portfolio <br />version 1</h2>
@@ -634,7 +658,8 @@
       </div>
 
       <div id="copyright">
-        <p>© DHANUSH KUMAR K</p>
+        <p>@ DHANUSH KUMAR K</p>
+        <p>©Design inspired from Adeola Adeoti</p>
       </div>
     </div>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
