--- a/index.html
+++ b/index.html
@@ -667,14 +667,7 @@
       AOS.init();
     </script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
+   <script src="https://unpkg.com/ionicons@7.1.0/dist/ionicons.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
